# solana-risk

./: .gitignore  README.md  wallet1.json  wallet2.json
frontend/: .env.sample  README.md  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/app/components/: ClientWallet.tsx  GameMap.tsx
frontend/src/app/constants/: gameData.ts  programIds.ts
frontend/src/app/hooks/: useGame.ts
frontend/src/app/idl/: game.ts  player.json  player.ts  risk_game.json  risk_game.ts  territory.json  territory.ts  types.ts
frontend/src/app/services/: gameService.ts  risk_game.json
frontend/src/app/types/: game.ts
frontend/src/app/utils/: localWallet.ts
scripts/: airdrop-wallet2.js  airdrop-wallet2.ts  get-wallet-info.ts
solana-program/: .gitignore  Anchor.toml  Cargo.toml  README.md  deploy-buffer.json  local-wallet.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
solana-program/programs/game/: Cargo.toml  game-keypair.json
solana-program/programs/game/src/: lib.rs
solana-program/programs/player/: Cargo.toml  player-keypair.json
solana-program/programs/player/src/: lib.rs
solana-program/programs/solana-program-new/: Cargo.toml
solana-program/programs/solana-program-new/src/: lib.rs
solana-program/programs/territory/: Cargo.toml  territory-keypair.json
solana-program/programs/territory/src/: lib.rs
solana-program/src/: lib.rs
solana-program/tests/: risk-game.test.ts  solana-program-new.ts
