[package]
name = "risk-game"
version = "0.1.0"
description = "A Risk-like game built on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "risk_game"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.29.0"
itertools = "0.12.0" 