[package]
name = "territory"
version = "0.1.0"
description = "Territory management program for Risk game"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "territory"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0" 